--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section class="banner container-lg">
             <div class="container">
-                    <div class="text-banner">
+                    <div class="text-banner pl-lg-0 pr-lg-0 pl-md-0 pr-md-0 pl-2 pr-2">
                         <h1>
                             <b>
                                 melhor <span class="detail"><b>programa</b></span> para melhores resultados
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section id="services" class="numbers-animation-bg container-lg">
-            <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center flex-column flex-wrap flex-lg-row flex-md-row">
+            <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row flex-wrap">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="mr-3">
                         <img src="./imgs/icons/Academia.webp" alt="icone de academia">
@@ -102,9 +102,9 @@
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
-                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4">
+                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4 ml-md-2 mr-md-2 ml-lg-1 mr-lg-1">
                    <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/musculacao.webp" alt="imagem de musculação">
+                        <img src="./imgs/servicos/musculacao3.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Força</p>
@@ -112,7 +112,7 @@
                         <h3><b>Musculação</b></h3>
                     </div>
                     <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/ginastica.webp" alt="imagem de funcional">
+                        <img src="./imgs/servicos/ginastica3.webp" alt="imagem de funcional">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Resistência</p>
@@ -120,7 +120,7 @@
                         <h3><b>Funcional</b></h3>
                     </div>
                     <div class="card" tabindex="0">
-                        <img src="./imgs/servicos/funcional.webp" alt="imagem de persoal trainer">
+                        <img src="./imgs/servicos/funcional3.webp" alt="imagem de persoal trainer">
                         <div class="Tipo-de-treino d-flex mt-2">
                             <p class="mr-3">Treinamento</p>
                             <p>Resistência</p>
@@ -519,14 +519,6 @@
     </main>
     <footer class="footer-bg container-lg">
         <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
-            <div class="copyright">
-                <p class="d-flex flex-column flex-md-row flex-lg-row">
-                    © 2023 - Code by  
-                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
-                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
-                    </a>
-                </p>
-            </div>
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
                     <li><i class="fab fa-twitter" title="Ícone de twitter"></i></li>
@@ -537,6 +529,14 @@
             <div class="footer-termos d-flex flex-column flex-md-row flex-lg-row">
                 <p>política de Privacidade</p>
                 <p>Termos e Condições</p>
+            </div>
+            <div class="copyright">
+                <p class="d-flex justify-content-center align-items-center flex-lg-row">
+                    © 2023 - Code by  
+                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
+                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
+                    </a>
+                </p>
             </div>
         </div>
         <button id="scrollTopButton" class="scrollTop" aria-label="Ir para o topo da página">
