ajustando responsividade no services

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </div>
         </section>
         <section id="services" class="numbers-animation-bg container-lg">
-            <div class="numbers-animation-container container-lg d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row flex-wrap">
-                <div class="d-flex justify-content-around align-items-center">
+            <div class="numbers-animation-container container d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row flex-wrap">
+                <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
                     <div class="mr-3">
                         <img src="./imgs/icons/Academia.webp" alt="icone de academia">
                     </div>
@@ -67,7 +67,7 @@
                         <h2 class="title-type">Academias</h2>
                     </div>
                 </div>
-                <div class="d-flex justify-content-around align-items-center">
+                <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
                     <div class="mr-3">
                         <img src="./imgs/icons/clientes.webp" alt="icone de clientes">
                     </div>
@@ -76,7 +76,7 @@
                         <h2 class="title-type">Clientes</h2>
                     </div>
                 </div>
-                <div class="d-flex justify-content-around align-items-center">
+                <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
                     <div class="mr-3">
                         <img src="./imgs/icons/model.webp" alt="icone de 25 anos de academia">
                     </div>
@@ -85,7 +85,7 @@
                         <h2 class="title-type">Anos mudando vidas</h2>
                     </div>
                 </div>
-                <div class="d-flex justify-content-around align-items-center">
+                <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
                     <div class="mr-3">
                         <img src="./imgs/icons/personais.webp" alt="icone de quantidade de personais">
                     </div>
