--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                         <h3><b>Ginastica</b></h3>
                     </div>
                 </div>
-                <div class="structures-text container-lg d-flex justify-content-center align-items-center flex-column mx-auto pl-3 pr-3">
-                    <h2 class="mx-auto"><b>conheça nossos profissionais</b></h2>
-                    <p class="mx-auto">Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
+                <div class="structures-text container mx-auto d-flex justify-content-center align-items-center flex-column">
+                    <h2><b>conheça nossos profissionais</b></h2>
+                    <p>Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
                 <div class="structures container-lg ml-2 mr-2 ml-md-3 mr-md-3 ml-lg-5 mr-lg-5">
                     <div class="structures-container d-flex justify-content-center align-items-center flex-column flex-lg-row">
@@ -222,7 +222,7 @@
                 <div id="voltar">
                     <i class="next-banck m-1 m-md-3 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
                 </div>
-                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                    <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento11.webp" alt="imagem da aluna 1">
                         </div>
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                    <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento22.webp" alt="imagem da aluna 2">
                         </div>
@@ -284,7 +284,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slider container-cometario flex-column flex-md-row flex-lg-row" tabindex="0">
+                    <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
                                 <img src="./imgs/depoimentos/depoimento33.webp" alt="imagem da aluna 3">
                         </div>
