--- a/html/blog.html
+++ b/html/blog.html
@@ -45,14 +45,6 @@
     </main>
     <footer class="footer-bg container-lg">
         <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
-            <div class="copyright">
-                <p class="d-flex flex-column flex-md-row flex-lg-row">
-                    © 2023 - Code by  
-                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
-                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
-                    </a>
-                </p>
-            </div>
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
                     <li><i class="fab fa-twitter" title="Ícone de twitter"></i></li>
@@ -63,6 +55,14 @@
             <div class="footer-termos d-flex flex-column flex-md-row flex-lg-row">
                 <p>política de Privacidade</p>
                 <p>Termos e Condições</p>
+            </div>
+            <div class="copyright">
+                <p class="d-flex justify-content-center align-items-center flex-lg-row">
+                    © 2023 - Code by  
+                    <a class="d-flex align-items-center ml-1" href="https://www.linkedin.com/in/lucaass1997/" target="_blank">
+                        Lucas Gomes.<i class="fab fa-linkedin ml-1" title="icone do linkedin"></i>
+                    </a>
+                </p>
             </div>
         </div>
         <button id="scrollTopButton" class="scrollTop" aria-label="Ir para o topo da página">
