--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
             <div class="container-lg d-flex justify-content-center align-items-center">
                 <div id="voltar">
-                    <i class="next-banck m-1 m-md-3 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
+                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
                 </div>
                     <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
@@ -316,12 +316,12 @@
                         </div>
                     </div>
                 <div id="avancar">
-                    <i class="next-banck m-1 m-md-3 m-lg-5 fas fa-chevron-right" id="next-button"></i>
+                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-right" id="next-button"></i>
                 </div>
             </div>
         </section>
         <section class="calculadora-bg container-lg d-flex">
-            <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-lg-row">
+            <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-md-column flex-lg-row">
                 <div class="calculadora-contaitaner-img">
                     <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
                 </div>
