--- a/index.html
+++ b/index.html
@@ -342,12 +342,12 @@
                 </div>
             </div>
         </section>
-        <section id="plans" class="plans container-lg d-flex justify-content-center align-items-center flex-column" style="width: 100%; height: 100vh; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
+        <section id="plans" class="plans container-lg d-flex justify-content-center align-items-center flex-column" style="width: 100%; height: 100%; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
             <div class="title-plans container d-flex justify-content-center align-items-center flex-column pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-row flex-lg-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
+           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-column flex-lg-column flex-xl-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
