--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             </div>
         </section>
         <section id="contact" class="contact container-lg">
-            <div class="contact-title container d-flex flex-lg-row flex-md-row flex-column justify-content-between align-items-center">
+            <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center">
                 <div >
                     <h2 class="d-flex">
                         <b>PrimeFit</b><img src="./imgs/icons/peso.webp" alt="imagem de um haltere">
@@ -462,7 +462,7 @@
                     </p>
                 </div>
             </div>
-            <div class="contact-info d-flex justify-content-center align-items-center align-items-lg-start flex-column flex-lg-row">
+            <div class="contact-info d-flex justify-content-center align-items-center align-items-md-center align-items-lg-start flex-column flex-lg-row">
                 <div class="barra">
                 </div>
                 <address class="contact-middle d-flex justify-content-center align-items-center align-items-lg-start flex-column">
