--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <p>Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
                 <div class="structures container-lg ml-2 mr-2 ml-md-3 mr-md-3 ml-lg-5 mr-lg-5">
-                    <div class="structures-container d-flex justify-content-sm-start justify-content-md-start justify-content-lg-center flex-row flex-md-row flex-lg-row flex-lg-wrap">
+                    <div class="structures-container d-flex justify-content-sm-start justify-content-md-start justify-content-lg-start justify-content-xl-center flex-row flex-md-row flex-lg-row">
                         <div class="structures-card" tabindex="0">
                             <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
                             <div class="card-body">
