--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">
                     <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-label="Menu">
                     <span class="navbar-toggler-icon">
                         <i class="fas fa-bars"></i>
                     </span>
@@ -324,8 +324,11 @@
                 <div class="calculadora-contaitaner-img">
                     <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
                 </div>
-                <div class="calculadora-container container d-flex justify-content-center flex-column">
-                    <h2>Cálcule seu IMC</h2>
+                <div class="calculadora-container container d-flex justify-content-center align-items-center flex-column">
+                    <div class="d-flex align-items-center">
+                        <h2>Cálcule seu IMC</h2>
+                        <i class="fas fa-question-circle m-2" title="Ícone de Dúvida"></i>
+                    </div>
                     <div class="divAltura">
                         <label for="altura">Altura (M)</label>
                         <input type="number" id="altura" placeholder="Exemplo 1,75" aria-describedby="altura" oninput="validarInput(this)"/>
@@ -452,7 +455,7 @@
             <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center">
                 <div >
                     <h2 class="d-flex">
-                        <b>PrimeFit</b><img src="./imgs/icons/peso.webp" alt="imagem de um haltere">
+                        <b>PrimeFit</b><img src="./imgs/icons/peso3.webp" alt="imagem de um haltere">
                     </h2>
                 </div>
                 <div>
