ajustando novo ícone de dúvida

--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
                     <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
                 </div>
                 <div class="calculadora-container container d-flex justify-content-center align-items-center flex-column">
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex justify-content-center align-items-center">
                         <h2>Cálcule seu IMC</h2>
-                        <i class="fas fa-question-circle m-2" title="Ícone de Dúvida"></i>
+                        <i class="fas fa-question-circle" title="Ícone de Dúvida"></i>
                     </div>
                     <div class="divAltura">
                         <label for="altura">Altura (M)</label>
