--- a/index.html
+++ b/index.html
@@ -321,13 +321,60 @@
         </section>
         <section class="calculadora-bg container-lg d-flex">
             <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-md-column flex-lg-row">
+                
+                <div id="fade" class="hide"></div>
+                <div id="modal" class="hide">
+                    <div class="modal-header d-flex justify-content-between align-items-center">
+                      <h2>PrimeFit</h2>
+                      <button class="fechar-modal" id="close-modal">Fechar</button>
+                    </div>
+                    <div class="modal-body">
+                        <table>
+                            <tr>
+                                <th>IMC</th>
+                                <th>Classificação</th>
+                            </tr>
+                            <tr>
+                                <td>Menor que 18,5</td>
+                                <td>Magreza</td>
+                            </tr>
+                            <tr>
+                                <td>18,5 a 24,9</td>
+                                <td>Normal</td>
+                            </tr>
+                            <tr>
+                                <td>25 a 29,9</td>
+                                <td>Sobrepeso</td>
+                            </tr>
+                            <tr>
+                                <td>30 a 34,9</td>
+                                <td>Obesidade grau I</td>
+                            </tr>
+                            <tr>
+                                <td>35 a 39,9</td>
+                                <td>Obesidade grau II</td>
+                            </tr>
+                            <tr>
+                                <td>Maior que 40</td>
+                                <td>Obesidade grau III</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="modal-link d-flex justify-content-center align-items-center">
+                        <p>
+                            <a href="https://pt.wikipedia.org/wiki/%C3%8Dndice_de_massa_corporal" target="_blank" rel="noopener noreferrer">
+                                Dúvidas? Clique <i class="fas fa-link" title="Ícone de link"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
                 <div class="calculadora-contaitaner-img">
                     <i class="fas fa-dumbbell" title="Ícone de haltere"></i>
                 </div>
                 <div class="calculadora-container container d-flex justify-content-center align-items-center flex-column">
                     <div class="d-flex justify-content-center align-items-center">
                         <h2>Cálcule seu IMC</h2>
-                        <i class="fas fa-question-circle" title="Ícone de Dúvida"></i>
+                        <i id="open-modal" class="fas fa-question-circle" title="Ícone de Dúvida"></i>
                     </div>
                     <div class="divAltura">
                         <label for="altura">Altura (M)</label>
