Adição de novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button  id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.webp); background-size: cover;">
@@ -460,7 +460,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price44.webp); background-size: cover;">
@@ -471,7 +471,7 @@
                         </div>
                         <div>
                             <p>Por 1 ano</p>
-                            <h4><b>R$750</b></h4>
+                            <h4><b >R$750</b></h4>
                         </div>
                     </div>
                     <ul class="list-group list-group-flush" >
@@ -493,7 +493,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
                     </div>
                 </div>
             </div>
@@ -597,6 +597,7 @@
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/wow.min.js"></script>
+    <script type="text/javascript" src="./js/modal.js"></script>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
