adicionando animações e ajustes no css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container-lg-header">
-            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center">
+            <nav class="nav navbar-expand-lg pl-lg-5 pr-lg-5 pl-3 pr-3 d-flex justify-content-between align-items-center animated  fadeIn">
                 <a class="navbar-brand" href="#">
                     <h1 class="d-flex pl-lg-0 pr-lg-0 pl-2 pg-2"><b>PrimeFit</b><img src="./imgs/icons/peso1.webp" alt="Logo da primeFit"></h1>
                 </a>
@@ -36,20 +36,20 @@
         <section class="banner container-lg">
             <div class="container">
                     <div class="text-banner pl-lg-0 pr-lg-0 pl-md-0 pr-md-0 pl-2 pr-2">
-                        <h1>
+                        <h1 class="animated fadeInLeft wow delay-03s">
                             <b>
                                 melhor <span class="detail"><b>programa</b></span> para melhores resultados
                             </b>
                         </h1>
-                        <p>
+                        <p class="animated fadeInLeft wow delay-04s">
                             Transforme seu corpo, supere limites e alcance seus objetivos conosco!
                         </p>
-                        <button type="button" class="btn btn-dark col-lg-5 col-sm-6 col-8 p-3 d-flex justify-content-center align-items-center" id="enviarMensagem" aria-label="Enviar mensagem">
+                        <button type="button" class="btn btn-dark col-lg-5 col-sm-6 col-8 p-3 d-flex justify-content-center align-items-center animated fadeIn delay-05s" id="enviarMensagem" aria-label="Enviar mensagem">
                                 Enviar Mensagem
                                 <i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
-                    <div class="image">
+                    <div class="image animated fadeIn">
                         <img class="slider-img" src="./imgs/banner/banner01.webp" alt="imagem do banner 1">
                         <img class="slider-img" src="./imgs/banner/banner02.webp" alt="imagem do banner 2">
                         <img class="slider-img" src="./imgs/banner/banner03.webp" alt="imagem do banner 3">
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section id="services" class="numbers-animation-bg container-lg">
-            <div class="numbers-animation-container container d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row flex-wrap">
+            <div class="numbers-animation-container container d-flex justify-content-center align-items-center flex-column flex-md-row flex-lg-row flex-wrap wow animated fadeIn delay-04s">
                 <div class="d-flex justify-content-center align-items-center col-12 col-md-4 col-lg">
                     <div class="mr-3">
                         <img src="./imgs/icons/Academia.webp" alt="icone de academia">
@@ -98,11 +98,11 @@
         </section>
         <section class="services container-lg">
             <div>
-                <div class="services-text d-flex flex-column mx-auto pr-1 pl-1">
+                <div class="services-text d-flex flex-column mx-auto pr-1 pl-1 wow animated fadeIn delay-04s">
                     <h2><b>Descubra a Excelência</b></h2>
                     <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
                 </div>
-                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4 ml-md-2 mr-md-2 ml-lg-1 mr-lg-1">
+                <div class="container-services d-flex justify-content-center align-items-center flex-column flex-lg-row ml-4 mr-4 ml-md-2 mr-md-2 ml-lg-1 mr-lg-1 wow animated fadeInUp delay-05s">
                    <div class="card" tabindex="0">
                         <img src="./imgs/servicos/musculacao3.webp" alt="imagem de musculação">
                         <div class="Tipo-de-treino d-flex mt-2">
@@ -128,11 +128,11 @@
                         <h3><b>Ginastica</b></h3>
                     </div>
                 </div>
-                <div class="structures-text container mx-auto d-flex justify-content-center align-items-center flex-column">
+                <div class="structures-text container mx-auto d-flex justify-content-center align-items-center flex-column wow animated fadeIn delay-04s">
                     <h2><b>conheça nossos profissionais</b></h2>
                     <p>Transforme-se com profissionais prontos para impulsionar sua jornada fitness. Descubra o extraordinário em nossa academia.</p>
                 </div>
-                <div class="structures container-lg ml-2 mr-2 ml-md-3 mr-md-3 ml-lg-5 mr-lg-5">
+                <div class="structures container-lg ml-2 mr-2 ml-md-3 mr-md-3 ml-lg-5 mr-lg-5 wow animated fadeInUp delay-04s">
                     <div class="structures-container d-flex justify-content-sm-start justify-content-md-start justify-content-lg-start justify-content-xl-center flex-row flex-md-row flex-lg-row">
                         <div class="structures-card" tabindex="0">
                             <img class="card-img-top" src="./imgs/estrutores/team-img-1.webp" alt="Imagem do profissional">
@@ -203,10 +203,10 @@
                 </div>
                 <div class="banner-g container-lg">
                     <div class="row">
-                        <div class="col-lg" tabindex="0">
+                        <div class="col-lg wow animated fadeInLeft delay-04s" tabindex="0">
                             <img src="./imgs/model1.webp" alt="imagem de modelos fitnes">
                         </div>
-                        <div class="col-lg" tabindex="0">
+                        <div class="col-lg wow animated fadeInRight delay-04s" tabindex="0">
                             <img src="./imgs/model3.webp" alt="imagem de um ciclista em ação">
                         </div>
                     </div>
@@ -214,12 +214,12 @@
             </div>
         </section>
         <section class="feedback-bg container-lg">
-            <div class="feedback-title d-flex justify-content-center align-items-center mx-auto mb-5">
+            <div class="feedback-title d-flex justify-content-center align-items-center mx-auto mb-5 wow animated fadeIn delay-03s">
                 <h2><b>Feedback dos Nossos Alunos!</b></h2>
             </div>
-            <div class="container-lg d-flex justify-content-center align-items-center">
+            <div class="container-lg d-flex justify-content-center align-items-center wow animated fadeInUp delay-04s">
                 <div id="voltar">
-                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-left" id="prev-button"></i>
+                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-left wow animated fadeInRight delay-07s" id="prev-button"></i>
                 </div>
                     <div class="slider container-cometario flex-column flex-md-column flex-lg-row" tabindex="0">
                         <div class="mr-5  ml-5">
@@ -315,13 +315,12 @@
                         </div>
                     </div>
                 <div id="avancar">
-                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-right" id="next-button"></i>
+                    <i class="next-banck m-1 m-md-5 m-lg-5 fas fa-chevron-right wow animated fadeInLeft delay-07s" id="next-button"></i>
                 </div>
             </div>
         </section>
         <section class="calculadora-bg container-lg d-flex">
-            <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-md-column flex-lg-row">
-                
+            <div class="d-flex justify-content-center align-items-center mx-auto flex-column flex-md-column flex-lg-row wow animated fadeIn delay-07s">
                 <div id="fade" class="hide"></div>
                 <div id="modal" class="hide">
                     <div class="modal-header d-flex justify-content-between align-items-center">
@@ -391,12 +390,12 @@
                 </div>
             </div>
         </section>
-        <section id="plans" class="plans container-lg d-flex justify-content-center align-items-center flex-column" style="width: 100%; height: 100%; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
-            <div class="title-plans container d-flex justify-content-center align-items-center flex-column pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
+        <section id="plans" class="plans container-lg d-flex justify-content-center align-items-center flex-column " style="width: 100%; height: 100%; background-image: url(./imgs/cards-plans/banne2.webp); background-size: cover; background-repeat: no-repeat; background-position: center;">
+            <div class="title-plans container d-flex justify-content-center align-items-center flex-column pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0 wow animated fadeIn delay-03s">
                 <h2><b>Nossos Planos</b></h2>
                 <p>Nossos Serviços Personalizados para Seu Sucesso Fitness.</p>
             </div>
-           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-column flex-lg-column flex-xl-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0">
+           <div class="container-plans-bg d-flex justify-content-center flex-column flex-md-column flex-lg-column flex-xl-row pl-2 pr-2 pl-md-3 pr-md-3 pl-lg-0 pr-lg-0 wow animated fadeIn delay-04s">
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price55.webp); background-size: cover;">
                     <div class="container-plans">
                         <div>
@@ -427,7 +426,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button  id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button  id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInLeft delay-05s">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans" style="background-image: url(./imgs/cards-plans/price-2.webp); background-size: cover;">
@@ -460,7 +459,7 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInUp delay-05s">Assinar</button>
                     </div>
                 </div>
                 <div class="card-plans p-5" style="background-image: url(./imgs/cards-plans/price44.webp); background-size: cover;">
@@ -493,13 +492,13 @@
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary">Assinar</button>
+                        <button id="enviarPlanoWpp" type="button" class="btn btn-outline-secondary wow animated fadeInRight delay-05s">Assinar</button>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contact" class="contact container-lg">
-            <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center">
+            <div class="contact-title container d-flex flex-lg-row flex-md-column flex-column justify-content-between align-items-center wow animated fadeIn delay-04s">
                 <div >
                     <h2 class="d-flex">
                         <b>PrimeFit</b><img src="./imgs/icons/peso3.webp" alt="imagem de um haltere">
@@ -511,7 +510,7 @@
                     </p>
                 </div>
             </div>
-            <div class="contact-info d-flex justify-content-center align-items-center align-items-md-center align-items-lg-start flex-column flex-lg-row">
+            <div class="contact-info d-flex justify-content-center align-items-center align-items-md-center align-items-lg-start flex-column flex-lg-row wow animated fadeIn delay-04s">
                 <div class="barra">
                 </div>
                 <address class="contact-middle d-flex justify-content-center align-items-center align-items-lg-start flex-column">
@@ -526,7 +525,7 @@
                     </h2>
                     <div>
                         <h3>Mensagem via whatsapp</h3>
-                        <button type="button" class="btn btn-success" id="enviarMensagem" aria-label="Enviar">
+                        <button type="button" class="btn btn-success wow animated fadeInLeft delay-05s" id="enviarMensagem" aria-label="Enviar">
                             Enviar<i class="fab fa-whatsapp ml-2" title="Ícone de whatsapp"></i>
                         </button>
                     </div>
@@ -567,7 +566,7 @@
         </section>
     </main>
     <footer class="footer-bg container-lg">
-        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row">
+        <div class="container d-flex justify-content-between align-items-center mx-auto flex-column flex-lg-row wow animated fadeIn delay-04s">
             <div class="footer-redes-sociais d-flex align-items-center">
                 <ul class="d-flex justify-content-center align-items-center">
                     <li><i class="fab fa-twitter" title="Ícone de twitter"></i></li>
@@ -598,6 +597,7 @@
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/wow.min.js"></script>
     <script type="text/javascript" src="./js/modal.js"></script>
+    <script>new WOW().init();</script>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
